<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- #if TYPE_DEMO -->
		<string name="app_name">Gloomy Dungeons 3D demo</string>
	<!-- #end -->
	<!-- #if !TYPE_DEMO -->
		<string name="app_name">Gloomy Dungeons 3D</string>
	<!-- #end -->
	<string name="font_name">YanoneKaffeesatz-Regular.ttf</string>
	<string name="font_lbl_size">32</string>
	<string name="font_stats_size">26</string>
	<string name="menu_menu">Menu</string>
	<string name="menu_options">Options</string>
	<string name="menu_about">About</string>
	<string name="menu_exit">Exit</string>
	<string name="menu_code">Code</string>
	<string name="btn_new_game">New Game</string>
	<string name="btn_continue">Continue</string>
	<string name="btn_skip_tutorial">Skip tutorial</string>
	<string name="btn_load">Load</string>
	<string name="btn_save">Save</string>
	<string name="dlg_enable_sound">Enable sound?</string>
	<string name="dlg_yes">Yes</string>
	<string name="dlg_no">No</string>
	<string name="dlg_new_game">Current progress will be lost.\nAre you sure?</string>
	<string name="dlg_ok">OK</string>
	<string name="dlg_cancel">Cancel</string>
	<string name="dlg_select_controls">Select controls type</string>
	<string name="dlg_select_max_rotate">Select max rotate angle</string>
	<string name="dlg_select_zeemote_mapping">Select button mapping</string>
	<string name="dlg_select_slot_load">Select slot for load</string>
	<string name="dlg_select_slot_save">Select slot for save</string>
	<string name="dlg_enter_code">Enter code</string>
	<string name="dlg_about_title">About</string>
	<string name="dlg_about_text"><![CDATA[
<b>Gloomy Dungeons 3D</b><br />
<i>ver. {$BUILD}</i><br />
<br />
<b>Code:</b> restorer<br />
<b>Graphics:</b> <a href="mailto:smoktunovich@gmail.com">Denis Smoktunovich</a><br />
<b>Sound:</b> <a href="http://www.nongnu.org/freedoom/">www.nongnu.org/freedoom</a><br />
<b>Level design:</b> <a href="mailto:zin.wtf@gmail.com">zin</a>, restorer<br />
<b>Texts:</b> <a href="mailto:zin.wtf@gmail.com">zin</a>, restorer<br />
<br />
<b>Thanks for testing:</b><br />
<a href="http://forum.samdroid.net/">forum.samdroid.net</a><br />
<a href="http://4pda.ru/forum/">4pda.ru/forum</a><br />
oOLokiOo<br />
<br />
<b>Email me:</b> <a href="mailto:restorer@zame-dev.org">restorer@zame-dev.org</a>
	]]></string>
	<string name="msg_game_saved">Game saved</string>
	<string name="msg_cant_copy_state">Can’t copy state</string>
	<string name="msg_cant_save_state">Can’t save state</string>
	<string name="msg_cant_load_state">Can’t load state</string>
	<string name="msg_old_saves_restored">Old saves restored</string>
	<string name="val_empty">Empty</string>
	<string name="pref_controls">Controls</string>
	<string name="pref_controls_type">Controls type</string>
	<string name="pref_controls_settings">Controls settings</string>
	<string name="pref_controls_alpha">Controls opacity</string>
	<string name="pref_params">Parameters</string>
	<string name="pref_max_rotate">Max rotate angle (for Experimental)</string>
	<string name="pref_invert_rotation">Invert rotation (for Experimantal and Accelerometer)</string>
	<string name="pref_accelerometer_enabled">Enable accelerometer</string>
	<string name="pref_accelerometer_acceleration">Accelerometer acceleration</string>
	<string name="pref_trackball_acceleration">Trackball acceleration</string>
	<string name="pref_speed">Move/Rotate speed</string>
	<string name="pref_pad_x_accel">Pad X-Acceleration</string>
	<string name="pref_pad_y_accel">Pad Y-Acceleration</string>
	<string name="pref_move_speed">Move speed</string>
	<string name="pref_strafe_speed">Strafe speed</string>
	<string name="pref_rotate_speed">Rotate speed</string>
	<string name="pref_zeemote">Zeemote</string>
	<string name="pref_zeemote_x_accel">X-Acceleration</string>
	<string name="pref_zeemote_y_accel">Y-Acceleration</string>
	<string name="pref_zeemote_mapping_fire">Button A</string>
	<string name="pref_zeemote_mapping_a">Button B</string>
	<string name="pref_zeemote_mapping_b">Button C</string>
	<string name="pref_zeemote_mapping_c">Button D</string>
	<string name="pref_key_mappings">Key mappings</string>
	<string name="pref_screen">Screen</string>
	<string name="pref_gamma">Gamma</string>
	<string name="pref_level_texture_smoothing">Level texture smoothing</string>
	<string name="pref_weapons_texture_smoothing">Weapons texture smoothing</string>
	<string name="pref_sound">Sound</string>
	<string name="pref_enable_sound">Enable sound</string>
	<string name="pref_music_volume">Music volume</string>
	<string name="pref_effects_volume">Effects volume</string>
	<string name="pref_key_forward">Forward</string>
	<string name="pref_key_backward">Backward</string>
	<string name="pref_key_strafe_left">Strafe left</string>
	<string name="pref_key_strafe_right">Strafe right</string>
	<string name="pref_key_rotate_left">Rotate left</string>
	<string name="pref_key_rotate_right">Rotate right</string>
	<string name="pref_key_action">Action</string>
	<string name="pref_key_next_weapon">Next weapon</string>
	<string name="pref_key_toggle_map">Toggle map</string>
	<string name="pref_key_strafe_mode">Enable strafe mode</string>
	<string name="pref_misc">Misc</string>
	<string name="pref_map_position">Map position</string>
	<string name="pref_show_crosshair">Show crosshair</string>
	<string name="pref_rotate_screen">Rotate in-game screen</string>
	<string name="menu_help">Press MENU for more options</string>
	<string name="endl_kills">Kills: %d%%</string>
	<string name="endl_items">Items: %d%%</string>
	<string name="endl_secrets">Secrets: %d%%</string>
	<string name="lib_press_key">Press a hardware key</string>
	<string name="lib_none">&lt;none&gt;</string>
	<string name="lib_clear">Clear</string>
	<string name="lbl_fps">FPS:</string>
	<string name="lbl_cant_open_door">Can’t open this door</string>
	<string name="lbl_need_blue_key">You need a blue key</string>
	<string name="lbl_need_red_key">You need a red key</string>
	<string name="lbl_need_green_key">You need a green key</string>
	<string name="lbl_secret_found">Secret found</string>
	<string name="game_over">Game Over</string>
	<string name="start_new_game">Start New Game</string>
	<string name="load_autosave">Load Autosave</string>
	<string name="setup_select">Select</string>
	<string name="setup_controls">Select controls type</string>
	<string name="setup_smoothing">Select smoothing level</string>
	<string name="setup_ctl_classic">Classic</string>
	<string name="setup_ctl_improved">Improved</string>
	<string name="setup_ctl_left_pad">Left Pad</string>
	<string name="setup_ctl_right_pad">Right Pad</string>
	<string name="setup_ctl_experimental_a">Experimental A</string>
	<string name="setup_ctl_experimental_b">Experimental B</string>
	<string name="setup_ctl_zeemote">Zeemote</string>
	<string name="setup_smooth_hardcore">8-bit hardcore</string>
	<string name="setup_smooth_optimal">Optimal</string>
	<string name="setup_smooth_maximum">Maximum</string>

	<!-- #if TYPE_DEMO | TYPE_IFREE -->
		<string name="btn_full_version">Buy Full Version</string>
		<string name="btn_full_version_menu">Full Version</string>
	<!-- #end -->
	<!-- #if USE_EOD_BLOCKER -->
		<string name="eod_info">End of demo version. Buy full version and get more than 30 new levels!</string>
		<string name="eod_ok">Buy Full Version</string>
		<string name="eod_cancel">Cancel</string>
	<!-- #end -->
	<!-- #if TYPE_IFREE -->
		<string name="ifree_select_payment_method">Select payment method.</string>
		<string name="ifree_paypal">PayPal</string>
		<string name="ifree_sms">SMS</string>
		<string name="ifree_ok">OK</string>
		<string name="ifree_cancel">Cancel</string>
		<string name="ifree_close">Close</string>
		<string name="ifree_country_not_available">Your country is not available.</string>
		<string name="ifree_paypal_cancelled">Payment calcelled.</string>
		<string name="ifree_info">Unlock full version via SMS (%2$s %1$s)?</string>
		<string name="ifree_paypal_info">Unlock full version via PayPal (%2$s %1$s)?</string>
		<string name="ifree_please_wait">Please wait...</string>
		<string name="ifree_payment_cancelled">Error sending SMS.</string>
		<string name="ifree_payment_successfull">Thanks for purchase.</string>
		<string name="ifree_unlocked">Full version unlocked.</string>
		<string name="ifree_no_connection">Can’t connect to server.</string>
	<!-- #end -->
	<!-- #if TYPE_SFC -->
		<string name="sfc_ok">Send</string>
		<string name="sfc_cancel">Cancel</string>
		<string name="sfc_close">Close</string>
		<!-- #if USE_TIME_TRIAL -->
			<string name="sfc_info">Time-trial version has expired. To purchase full version you must send SMS (cost about 100 RUB incl. VAT). After sending SMS game automatically unlocks.</string>
		<!-- #end -->
		<!-- #if !USE_TIME_TRIAL -->
			<string name="sfc_info">End of demo version. To purchase full version you must send SMS (cost about 100 RUB incl. VAT). After sending SMS game automatically unlocks.</string>
		<!-- #end -->
		<string name="sfc_please_wait">Please wait...</string>
		<string name="sfc_payment_cancelled">Error sending SMS.</string>
		<string name="sfc_payment_successfull">SMS sent. Thank you for your purchase. Now you can continue playing.</string>
	<!-- #end -->
	<!-- #if USE_FULL_VERSION_OFFER -->
		<string name="dlg_full_version_offer"><![CDATA[
Limited offer!
Full version only for $0.99
		]]></string>
	<!-- #end -->
	<!-- #if USE_RATE_OFFER -->
		<string name="dlg_rate_offer"><![CDATA[
Love this game?
Vote for it or leave feedback in Android Market!
		]]></string>
		<string name="dlg_later">Remind me later</string>
	<!-- #end -->
	<!-- #if USE_LEADBOLT -->
		<string name="btn_top_apps">Today’s Top Apps</string>
	<!-- #end -->

	<!-- controller menu -->
	<string name="menu_connect">Controller: Connect</string>
	<string name="menu_disconnect">Controller: Disconnect</string>
	<string name="connecting">Connecting ...</string>
	<string name="disconnecting">Disconnecting ...</string>
</resources>
