<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res/{PKG_ROOT}.game">
	<PreferenceCategory android:title="@string/pref_controls">
		<{PKG_ROOT}.libs.ListPreference
			android:key="ControlsType"
			android:title="@string/pref_controls_type"
			android:entries="@array/entries_controls"
			android:entryValues="@array/values_controls"
			android:dialogTitle="@string/dlg_select_controls"
			android:defaultValue="TypeB"
		/>
		<PreferenceScreen android:title="@string/pref_controls_settings">
			<PreferenceCategory android:title="@string/pref_params">
				<{PKG_ROOT}.libs.SeekBarPreference
					android:key="MaxRotateAngle"
					android:title="@string/pref_max_rotate"
					app:min="30"
					android:max="60"
					android:defaultValue="45"
				/>
				<CheckBoxPreference
					android:key="InvertRotation"
					android:title="@string/pref_invert_rotation"
					android:defaultValue="false"
				/>
				<{PKG_ROOT}.libs.SeekBarPreference
					android:key="TrackballAcceleration"
					android:title="@string/pref_trackball_acceleration"
					app:min="1"
					android:max="80"
					android:defaultValue="40"
				/>
			</PreferenceCategory>
			<PreferenceCategory android:title="@string/pref_speed">
				<{PKG_ROOT}.libs.SeekBarPreference
					android:key="MoveSpeed"
					android:title="@string/pref_move_speed"
					app:min="1"
					android:max="15"
					android:defaultValue="14"
				/>
				<{PKG_ROOT}.libs.SeekBarPreference
					android:key="StrafeSpeed"
					android:title="@string/pref_strafe_speed"
					app:min="1"
					android:max="15"
					android:defaultValue="7"
				/>
				<{PKG_ROOT}.libs.SeekBarPreference
					android:key="RotateSpeed"
					android:title="@string/pref_rotate_speed"
					app:min="1"
					android:max="10"
					android:defaultValue="6"
				/>
			</PreferenceCategory>
		</PreferenceScreen>
		<PreferenceScreen android:title="@string/pref_key_mappings">
			<{PKG_ROOT}.libs.KeyMapPreference
				android:key="KeyForward"
				android:title="@string/pref_key_forward"
				android:defaultValue="19"
			/>
			<{PKG_ROOT}.libs.KeyMapPreference
				android:key="KeyBackward"
				android:title="@string/pref_key_backward"
				android:defaultValue="20"
			/>
			<{PKG_ROOT}.libs.KeyMapPreference
				android:key="KeyRotateLeft"
				android:title="@string/pref_key_rotate_left"
				android:defaultValue="21"
			/>
			<{PKG_ROOT}.libs.KeyMapPreference
				android:key="KeyRotateRight"
				android:title="@string/pref_key_rotate_right"
				android:defaultValue="22"
			/>
			<{PKG_ROOT}.libs.KeyMapPreference
				android:key="KeyStrafeLeft"
				android:title="@string/pref_key_strafe_left"
			/>
			<{PKG_ROOT}.libs.KeyMapPreference
				android:key="KeyStrafeRight"
				android:title="@string/pref_key_strafe_right"
			/>
			<{PKG_ROOT}.libs.KeyMapPreference
				android:key="KeyAction"
				android:title="@string/pref_key_action"
				android:defaultValue="23"
			/>
			<{PKG_ROOT}.libs.KeyMapPreference
				android:key="KeyNextWeapon"
				android:title="@string/pref_key_next_weapon"
				android:defaultValue="27"
			/>
			<{PKG_ROOT}.libs.KeyMapPreference
				android:key="KeyToggleMap"
				android:title="@string/pref_key_toggle_map"
				android:defaultValue="84"
			/>
		</PreferenceScreen>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/pref_screen">
		<{PKG_ROOT}.libs.SeekBarPreference
			android:key="Gamma"
			android:title="@string/pref_gamma"
			android:max="10"
		/>
		<CheckBoxPreference
			android:key="LevelTextureSmoothing"
			android:title="@string/pref_level_texture_smoothing"
			android:defaultValue="false"
		/>
		<CheckBoxPreference
			android:key="WeaponsTextureSmoothing"
			android:title="@string/pref_weapons_texture_smoothing"
			android:defaultValue="true"
		/>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/pref_sound">
		<CheckBoxPreference
			android:key="EnableSound"
			android:title="@string/pref_enable_sound"
			android:defaultValue="false"
		/>
		<{PKG_ROOT}.libs.SeekBarPreference
			android:key="MusicVolume"
			android:title="@string/pref_music_volume"
			android:max="10"
			android:defaultValue="10"
			android:layout="?android:attr/preferenceLayoutChild"
			android:dependency="EnableSound"
		/>
		<{PKG_ROOT}.libs.SeekBarPreference
			android:key="EffectsVolume"
			android:title="@string/pref_effects_volume"
			android:max="10"
			android:defaultValue="5"
			android:layout="?android:attr/preferenceLayoutChild"
			android:dependency="EnableSound"
		/>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/pref_misc">
		<{PKG_ROOT}.libs.SeekBarPreference
			android:key="MapPosition"
			android:title="@string/pref_map_position"
			app:min="1"
			android:max="9"
			android:defaultValue="5"
		/>
		<CheckBoxPreference
			android:key="ShowCrosshair"
			android:title="@string/pref_show_crosshair"
			android:defaultValue="false"
		/>
		<CheckBoxPreference
			android:key="RotateScreen"
			android:title="@string/pref_rotate_screen"
			android:defaultValue="false"
		/>
	</PreferenceCategory>
</PreferenceScreen>
