<?xml version="1.0" encoding="utf-8"?>
<{$PKG_ROOT}.libs.FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
	<!-- #if USE_EOD_BLOCKER -->
		<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:background="@drawable/endl_back">
			<LinearLayout
					android:orientation="vertical"
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:gravity="center"
					android:paddingLeft="40sp"
					android:paddingRight="40sp">
				<TextView
					android:id="@+id/TxtInfo"
					style="@style/EndLevelText"
					android:text="@string/eod_info"
				/>
				<LinearLayout
						android:orientation="horizontal"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:gravity="center"
						android:layout_marginTop="32sp">
					<Button
						android:id="@+id/BtnOk"
						android:text="@string/eod_ok"
						style="@style/EndLevelButton"
						android:layout_gravity="center_vertical"
						android:layout_marginRight="10sp"
					/>
					<Button
						android:id="@+id/BtnCancel"
						android:text="@string/eod_cancel"
						style="@style/EndLevelButton"
						android:layout_gravity="center_vertical"
					/>
				</LinearLayout>
			</LinearLayout>
		</RelativeLayout>
	<!-- #end -->
</{$PKG_ROOT}.libs.FrameLayout>
